src/golden/cards/typeerrors/test.golden/needkey.fl
	entity Thing
		String msg
	
	contract Setter
		haveA (String where) (Thing t)
		
	card Card
		implements Setter
			haveA where thing
